--- a/dataset/SNOWFLAKE_DATASET.json
+++ b/dataset/SNOWFLAKE_DATASET.json
@@ -5,12 +5,20 @@
 			"referenceName": "LS_ADF_TO_SNOWFLAKE",
 			"type": "LinkedServiceReference"
 		},
+		"parameters": {
+			"eachName": {
+				"type": "string"
+			}
+		},
 		"annotations": [],
 		"type": "SnowflakeV2Table",
 		"schema": [],
 		"typeProperties": {
-			"schema": "STAGING",
-			"table": "COUNTRY"
+			"schema": "RAW",
+			"table": {
+				"value": "@dataset().eachName",
+				"type": "Expression"
+			}
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
